[tool.poetry]
name = "frostbite"
version = "0.1.0"
description = "World server for Club Penguin"
authors = ["dote, dan, levi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
loguru = "^0.7.2"
uvicorn = "^0.31.0"
SQLAlchemy = "^2.0.35"
websockets = "^13.1"
PyJWT = "^2.9.0"
sentry-sdk = "^2.15.0"
starlette-context = "^0.3.6"
fastapi-events = "^0.12.0"
redis = "^5.1.1"
alembic-postgresql-enum = "^1.3.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
bcrypt = "^4.2.0"
sqlalchemy-utils = "^0.41.2"
pynacl = "^1.5.0"
cryptography = "^43.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | env
  | config
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 